# cpp-data-protection-core

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: README.md  ci.yml  codeql.yml  docker.yml  release.yml  sanitizer.yml
docs/: api-and-stl-rationale.md  architecture.md  backup-format.md  benchmark.md  chunking-and-dedup.md  cicd-status.md  cicd.md  concurrency-model.md  crash-recovery.md  diagrams.md  docker-status.md  docker.md  implementation-decisions.md  interview-qa.md  issue-backlog.md  release.md  technical-notes.md  transfer-protocol.md
include/dpc/common/: Error.hpp  FileUtils.hpp  Hash.hpp  Logger.hpp  Types.hpp
include/dpc/concurrency/: BoundedQueue.hpp  ThreadPool.hpp
include/dpc/core/: BackupEngine.hpp  Compressor.hpp  ContentDefinedChunker.hpp  FileScanner.hpp  FixedChunker.hpp  ManifestStore.hpp  ObjectStore.hpp  RestoreEngine.hpp  VerifyEngine.hpp
include/dpc/metadata/: Checkpoint.hpp  CommitMarker.hpp  FaultInjector.hpp  MetadataCompactor.hpp  RecoveryManager.hpp  WalLog.hpp
include/dpc/network/: BackupClient.hpp  BackupServer.hpp  PacketCodec.hpp  SessionIndex.hpp  TransferSession.hpp
scripts/: bench.sh  build.sh  clean.sh  demo_client_server.sh  demo_crash_recovery.sh  demo_local_backup.sh  docker_build.sh  docker_clean.sh  docker_demo.sh  docker_test.sh  test.sh
src/bench/: backup_bench_main.cpp
src/cli/: backup_client_main.cpp  backup_server_main.cpp  backupctl_main.cpp
src/concurrency/: BoundedQueue.cpp  ThreadPool.cpp
src/core/: BackupEngine.cpp  Compressor.cpp  ContentDefinedChunker.cpp  FileScanner.cpp  FixedChunker.cpp  ManifestStore.cpp  ObjectStore.cpp  RestoreEngine.cpp  VerifyEngine.cpp
src/metadata/: Checkpoint.cpp  CommitMarker.cpp  FaultInjector.cpp  MetadataCompactor.cpp  RecoveryManager.cpp  WalLog.cpp
src/network/: BackupClient.cpp  BackupServer.cpp  PacketCodec.cpp  SessionIndex.cpp  TransferSession.cpp
src/tools/: corrupt_repo_main.cpp
tests/fault_injection/: crash_recovery_test.sh
tests/integration/: backup_restore_verify_test.sh
tests/security/: security_malformed_test.sh
tests/unit/: test_bounded_queue.cpp  test_cdc_chunker.cpp  test_compressor.cpp  test_fixed_chunker.cpp  test_hash.cpp  test_manifest.cpp  test_packet_codec.cpp  test_wal.cpp
